# agelytics

./: .gitignore  BUGFIX_148.md  CHANGELOG.md  FEATURE_PHASE2_SUMMARY.md  FEATURE_REPORT.md  IMPLEMENTACAO_METRICAS.md  LICENSE  PHASE3_SUMMARY.md  README.md  TEST_OUTPUT_EXAMPLE.txt  TEST_RESULTS.md  debug_walls.py  key-info-archive.json  key-info.json  pyproject.toml  requirements.txt  test_housing.py  test_phase3.sh
agelytics/: __init__.py  __main__.py  api_client.py  civ_kb.py  cli.py  data.py  db.py  game_watcher.py  metrics.py  opening.py  overlay_server.py  parser.py  patterns.py  pdf_analysis.py  pdf_disclaimer.py  pdf_report.py  pdf_scouting.py  pdf_stats.py  pdf_style.py  production.py  replay_downloader.py  replay_parser.py  report.py  scouting.py  scouting_report.py  stats.py  tech_timings.py  watcher.py
agelytics/static/: overlay.html
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT_PATTERN.md  DOMAIN_KNOWLEDGE_TEMPLATE.md  IDLE_VILLAGER_LIMITATION.md  METRICAS_DETERMINISTICAS.md  METRICS.md
documentation/: ONBOARDING.md  metrics-methodology.md
integrations/openclaw/: README.md  __init__.py  analyze_prompt.md  callback.sh  deep_coach.py  deep_coach_prompt.md  dispatch.sh  live_watcher.py  quick_report.py  telegram_send.sh  watch_cron.sh  watcher.py
knowledge/aoe2/: README.md  benchmarks.json  changelog.md  civilizations.json  coaching-rules.md  (+4 more)
plans/: deep-analysis-v1.md  domain-knowledge-v1.md  phase2-roadmap.md
scripts/: healthcheck.sh  start_overlay.sh  start_watcher.sh  watch_cron.sh
tests/: test_metrics.py  test_new_metrics.py
