[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agelytics"
version = "0.1.0"
description = "AoE2 DE replay analyzer — local-first, no API dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["mgz"]

[project.scripts]
agelytics = "agelytics.cli:main"

[tool.setuptools.packages.find]
include = ["agelytics*"]
